fix: change body overflow-x hidden to clip to prevent touch scroll locks in Android Chrome

--- a/global.css
+++ b/global.css
@@ -56,9 +56,12 @@ html {
     font-family: var(--font-body);
 }
 
+html, body {
+    overflow-x: clip;
+}
+
 body {
     min-height: 100vh;
-    overflow-x: hidden;
     line-height: 1.6;
 }
 
